--- a/styles/style.scss
+++ b/styles/style.scss
@@ -3,7 +3,7 @@ $header2: 4rem;
 $header3: 2.5rem;
 $header4: 2rem;
 $text: 2.5rem;
-$gradient: liner-gradient(left, #38d39f, #38a4d3);
+$gradient: -webkit-linear-gradient(left, #38d39f, #38a4d3);
 $background-color: #154353;
 $gray-text: #2c2c2c;
 
@@ -14,6 +14,10 @@ $gray-text: #2c2c2c;
     flex-direction: $direction;
 }
 
+body{
+    animation: load 2s ease-in-out;
+}
 
 @import "global";
 @import "intro";
+@import "animations";
