--- a/styles/_intro.scss
+++ b/styles/_intro.scss
@@ -1,6 +1,8 @@
 .main-head{
     width: 95%;
     margin: 0 0 0 auto;
+    position: sticky;
+    top: 0%;
 }
 
 nav{
@@ -81,7 +83,7 @@ nav{
 
 .intro-text, 
 .intro-images{
-    flex: 1 1 50rem;
+    flex: 1 1 60rem;
 }
 
 .intro-images svg{
