--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,7 @@
 body {
   -webkit-animation: load 2s ease-in-out;
           animation: load 2s ease-in-out;
+  font-family: 'Montserrat Alternates', sans-serif;
 }
 
 * {
@@ -53,6 +54,9 @@ p {
 .main-head {
   width: 95%;
   margin: 0 0 0 auto;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0%;
 }
 
 nav {
@@ -187,8 +191,8 @@ nav ul {
 .intro-text,
 .intro-images {
   -webkit-box-flex: 1;
-      -ms-flex: 1 1 50rem;
-          flex: 1 1 50rem;
+      -ms-flex: 1 1 60rem;
+          flex: 1 1 60rem;
 }
 
 .intro-images svg {
@@ -385,6 +389,144 @@ nav ul {
   to {
     -webkit-transform: rotate(-12deg);
             transform: rotate(-12deg);
+  }
+}
+
+.projects {
+  height: 90vh;
+}
+
+.project {
+  height: auto;
+  width: 50rem;
+  margin: 5rem;
+  padding: 4rem 0rem 3rem 0rem;
+  text-align: center;
+  border-bottom: 2px solid #41f0de;
+}
+
+.project h2 {
+  font-size: 3rem;
+  padding: 2rem;
+}
+
+.project img {
+  height: 30rem;
+  width: 50rem;
+  padding: 2rem 0rem;
+}
+
+.project p {
+  padding: 2rem 0rem 1rem 0rem;
+  color: #2c2c2c;
+}
+
+@media screen and (max-width: 1334px) {
+  .intro h2 {
+    font-size: 6rem;
+  }
+  .intro h3 {
+    font-size: 4rem;
+  }
+  .intro-social {
+    margin-top: 3rem;
+  }
+  .intro-social a {
+    margin-right: 2rem;
+  }
+  .intro-images svg {
+    width: 80%;
+  }
+  .intro-text,
+  .intro-images {
+    -webkit-box-flex: 1;
+        -ms-flex: 1 1 40rem;
+            flex: 1 1 40rem;
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .intro-social {
+    margin-top: 3rem;
+  }
+  .intro-social a {
+    margin-right: 2rem;
+  }
+  .intro-social img {
+    width: 3rem;
+  }
+  .intro-images svg {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 890px) {
+  html {
+    font-size: 45%;
+  }
+  .main-head {
+    width: 100%;
+  }
+  nav {
+    margin: auto;
+  }
+  nav .logo {
+    padding: 1rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  nav ul {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    margin: 2rem 0rem;
+  }
+  .intro {
+    padding-top: 1.5rem;
+  }
+  .intro-text {
+    text-align: center;
+  }
+  .bg-shape {
+    opacity: .25;
+  }
+  .intro-images svg {
+    height: 60%;
+  }
+  .intro-social {
+    margin-top: 3rem;
+  }
+  .intro-social a {
+    margin-right: 2rem;
+  }
+  .intro-social img {
+    width: 5rem;
+  }
+  .active {
+    padding: .5rem 1.5rem;
+    border-radius: 1rem;
   }
 }
 /*# sourceMappingURL=style.css.map */
